<resources>
    <string name="app_name">PocketMonsters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_type">Type</string>
    <string name="pokemon_number">Number</string>
    <string name="pokemon_weight">Weight</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark Theme</string>
    <string name="picture_type">Picture Type</string>
    <string name="color">Color</string>
    <string name="bw">Black&amp;White</string>
    <string name="font_size">Font Size</string>
    <string name="small">Small</string>
    <string name="Large">Large</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="show_start_dialogue">Show start dialogue</string>
    <string name="ok">OK</string>
    <string name="welcome">Welcome to Pocket Monsters.</string>
    <string name="show_message">Show Message at Start</string>
    <string name="reset">Reset</string>
    <string name="copyright">Copyright &#169; 2021, Smugdemeanor™</string>
    <string name="brag">Tap for a surprise</string>
    <string name="effect">Effect</string>
    <string name="meh">Meh</string>

    <string-array name="font_size" >
        <item>Small</item>
        <item>Large</item>
        <item>Medium</item>

    </string-array>

    <string-array name="font_size_values" >
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="effects" >
        <item>Crop Square</item>
        <item>Crop Circle</item>
        <item>Blur</item>
        <item>Pixelation</item>
        <item>Invert</item>
        <item>Rounded Corners</item>
    </string-array>

    <string-array name="effect_values" >
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>