<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <CheckBoxPreference
        android:defaultValue="true"
        android:key="show_message_at_start"
        android:title="@string/show_start_dialogue" />

    <SwitchPreferenceCompat
        android:id="@+id/choose_theme_switch"
        android:key="set_dark_theme"
        android:title="@string/dark"/>

    <ListPreference
        android:summary="%s"
        android:defaultValue="0"
        android:entries="@array/font_size"
        android:entryValues="@array/font_size_values"
        android:key="font_size"
        android:title="@string/font_size"/>

    <ListPreference
        android:summary="%s"
        android:defaultValue="0"
        android:entries="@array/effects"
        android:entryValues="@array/effect_values"
        android:key="effect_selection"
        android:title="@string/effect"/>
</PreferenceScreen>
